vhp-infra/vhp-backup/policies/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minio-network-policy
  namespace: vhp-backup
spec:
  podSelector:
    matchLabels:
      [cite_start]app: minio [cite: 6]
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          vhp-layer: management # Sadece yönetim katmanından gelen trafiğe izin ver
    ports:
    - protocol: TCP
      port: 9000
    - protocol: TCP
      port: 9001
